--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,14 @@ header {
     margin-left: 10px;
     margin-bottom: 0px;
     margin-top: 7px; }
-    header #logo :hover {
-      filter: invert(100%);
-      transform-origin: center;
-      transition: 300ms; }
   header .header-redes {
     margin-left: 0px;
     margin-right: 10px;
     margin-bottom: 10px; }
+    header .header-redes .header-redes:hover {
+      transform: scale(1.1);
+      transform-origin: center;
+      transition: 300ms; }
 
 .flex-header {
   display: flex;
@@ -59,7 +59,7 @@ header {
 # index 1
 --------------------------------------------------------------*/
 .inicio {
-  margin-top: 150px; }
+  margin-top: 100px; }
 
 #hero {
   width: 100%;
@@ -77,6 +77,22 @@ header {
     right: 0; }
   #hero .container {
     padding-top: 0px; }
+  #hero .frase-inicio {
+    background-color: white;
+    background: rgba(255, 255, 255, 0.3);
+    margin-left: 0px;
+    width: 50%; }
+    #hero .frase-inicio p {
+      font-size: 1.5rem;
+      color: white;
+      margin-left: 0px;
+      padding-right: 30px;
+      margin-right: 0px;
+      padding-left: 30px;
+      text-align: left;
+      padding-bottom: 1rem;
+      padding-top: 1rem;
+      margin-bottom: 0px; }
   @media (max-width: 992px) {
     #hero #hero .container {
       padding-top: 62px; } }
@@ -112,6 +128,12 @@ header {
       font-size: 18px;
       line-height: 24px; } }
 
+section {
+  padding-bottom: 0px;
+  padding-top: 0px;
+  margin-bottom: 50px;
+  margin-top: 50px; }
+
 .gridIndex {
   display: grid;
   grid-gap: 0px;
@@ -119,6 +141,7 @@ header {
   grid-template-columns: 50% 50%;
   align-items: center;
   margin-bottom: 0px;
+  margin-top: 50px;
   grid-template-areas: "izquierda derecha"; }
   @media screen and (min-width: 250px) and (max-width: 768px) {
     .gridIndex {
@@ -140,10 +163,16 @@ header {
 .nuestrosServicios1 {
   background-color: #6f9c53;
   padding: 5px;
-  margin-top: 0px;
+  margin-top: 50px;
   text-align: center; }
   .nuestrosServicios1 #nuestrosServicios2 {
-    color: white; }
+    color: white;
+    margin-top: .5rem;
+    margin-bottom: .5rem; }
+
+#creamos {
+  margin-left: 100px;
+  margin-top: 10px; }
 
 .gridIndexServicios {
   display: grid;
@@ -169,10 +198,6 @@ header {
     height: 80px;
     width: 80px;
     margin-bottom: 10px; }
-    .gridIndexServicios .imagenesIndexServicios :hover {
-      transform: scale(1.1);
-      transform-origin: center;
-      transition: 300ms; }
   .gridIndexServicios .tituloIndexServicios {
     font-size: 1.3rem; }
   .gridIndexServicios .parrafoIndexServicios {
@@ -185,7 +210,7 @@ p, h2, form, table, header, ul {
   font-family: 'Roboto' , sans-serif;
   color: #4f4f4f; }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Montserrat', sans-serif;
   color: black;
   font-size: 25px; }
@@ -199,56 +224,63 @@ ul {
 
 /*--------------------------------------------------------------
 # Nosotros
---------------------------------------------------------------
-#nosotrosBackground {
-  background: url("../images/estrategia-byw.jpg");
+--------------------------------------------------------------*/
+.nosotros-background {
+  background: url("../images/windmill-2.png");
+  background-position: center;
   background-size: cover;
-  margin-top: 50px;
-  filter: opacity(70%);
-  padding-bottom: 50px;
-  margin-bottom: 100px;
-  padding-left: 20px; }*/
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin-top: 100px;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  margin-bottom: 0px; }
+
 .nosotros-content {
-  z-index: 9999;
-  margin-left: 100px;
-  margin-right: 100px; }
-  .nosotros-content .titulo, .nosotros-content .grid-contacto .elementos #contactanos, .grid-contacto .elementos .nosotros-content #contactanos {
-    font-family: 'Montserrat', sans-serif;
-    color: black;
-    font-size: 2.5rem; }
+  padding-top: 5px; }
   .nosotros-content #nosotros {
     margin-bottom: 20px;
-    padding-top: 20px;
-    margin-top: 100px; }
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-left: 100px; }
+    .nosotros-content #nosotros h1 {
+      font-family: 'Roboto', sans-serif; }
   .nosotros-content .grid-parrafo {
     display: grid;
-    grid-gap: 50px;
-    grid-template-columns: 50% 50%;
-    grid-template-areas: "izquierda derecha"; }
+    grid-gap: 6%;
+    grid-template-columns: 47% 47%;
+    margin-left: 100px;
+    margin-right: 100px;
+    grid-template-areas: "izquierda  derecha"; }
     @media screen and (min-width: 250px) and (max-width: 768px) {
       .nosotros-content .grid-parrafo {
         grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
     .nosotros-content .grid-parrafo #p-izquierda {
       grid-area: izquierda; }
       .nosotros-content .grid-parrafo #p-izquierda p {
-        font-size: 1rem; }
+        font-size: 1rem;
+        color: black;
+        font-family: 'Montserrat', sans-serif; }
     .nosotros-content .grid-parrafo #p-derecha {
       grid-area: derecha; }
-    .nosotros-content .grid-parrafo p {
-      font-size: 1rem;
-      color: #848484; }
-    .nosotros-content .grid-parrafo #trabajamos {
-      font-size: 18px;
-      color: #6f9c53; }
+      .nosotros-content .grid-parrafo #p-derecha p {
+        font-size: 1rem;
+        color: black;
+        font-family: 'Montserrat', sans-serif; }
+      .nosotros-content .grid-parrafo #p-derecha .trabajamos {
+        font-size: 20px;
+        color: #6f9c53;
+        font-weight: 500; }
 
 .grid-nosotros {
   display: grid;
-  grid-gap: 30px;
-  grid-template-columns: 50% 50%;
+  grid-gap: 6%;
+  grid-template-columns: 44% 38%;
   justify-content: space-around;
   text-align: center;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-right: 11%;
+  margin-left: 11%;
   margin-top: 70px;
   grid-template-areas: "izquierda derecha"; }
   @media screen and (min-width: 250px) and (max-width: 768px) {
@@ -259,12 +291,20 @@ ul {
     .grid-nosotros #nosotros-izquierda h2 {
       font-size: 25px;
       color: black; }
+    .grid-nosotros #nosotros-izquierda h3 {
+      font-size: 1.4rem;
+      margin-left: 20px; }
     .grid-nosotros #nosotros-izquierda p {
-      font-size: 1rem; }
+      font-size: 1rem;
+      margin-left: 30px;
+      margin-right: 30px; }
   .grid-nosotros #nosotros-derecha {
     grid-area: derecha; }
     .grid-nosotros #nosotros-derecha h2 {
       font-size: 25px; }
+    .grid-nosotros #nosotros-derecha h3 {
+      font-size: 1.4rem;
+      margin-left: 10px; }
     .grid-nosotros #nosotros-derecha p {
       font-size: 1rem; }
   .grid-nosotros .directores {
@@ -278,23 +318,61 @@ ul {
 /*--------------------------------------------------------------
 # Servicios
 --------------------------------------------------------------*/
+.servicios-background {
+  background: url(../images/white-desk.png);
+  background-size: cover;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin-top: 100px;
+  align-content: center; }
+
+.gridIndexServicios {
+  display: grid;
+  grid-gap: 5%;
+  grid-template-columns: 25% 25% 25%;
+  padding-top: 40px;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-bottom: 40px;
+  text-align: center;
+  justify-content: space-around;
+  grid-template-areas: "izquierda centro derecha"; }
+  @media screen and (min-width: 250px) and (max-width: 768px) {
+    .gridIndexServicios {
+      text-align: center;
+      grid-template-areas: "izquierda izquierda izquierda" "centro centro centro" "derecha derecha derecha"; } }
+  .gridIndexServicios .gridIndexServiciosIzquierda {
+    grid-area: izquierda; }
+  .gridIndexServicios .gridIndexServiciosCentro {
+    grid-area: centro; }
+  .gridIndexServicios .gridIndexServiciosDerecha {
+    grid-area: derecha;
+    margin-top: -25px; }
+  .gridIndexServicios .imagenesIndexServicios {
+    height: 80px;
+    width: 80px; }
+  .gridIndexServicios .tituloIndexServicios {
+    font-size: 1.3rem; }
+
 #seccionEstrategia {
   position: relative; }
   #seccionEstrategia #estrategiaYGestion {
     padding: 10px;
     font-size: 25px;
-    margin-top: 70px;
+    margin-top: 50px;
     padding-left: 150px;
     font-family: 'Montserrat', sans-serif;
+    color: white;
     font-weight: 300;
-    background-color: #b2b2b2; }
+    background-color: #b2b2b2;
+    margin-bottom: 1rem; }
   #seccionEstrategia .grid-estrategia {
     display: grid;
     grid-gap: 0px;
     justify-content: space-around;
     grid-template-columns: 50% 50%;
     align-items: center;
-    padding-top: 0px;
     margin: 0px;
     grid-template-areas: "izquierda derecha"; }
     @media screen and (min-width: 250px) and (max-width: 768px) {
@@ -307,7 +385,8 @@ ul {
       margin-top: 20px; }
     #seccionEstrategia .grid-estrategia #grid-estrategia-derecha {
       grid-area: derecha;
-      margin-right: 100px; }
+      margin-right: 100px;
+      margin-top: 20px; }
       #seccionEstrategia .grid-estrategia #grid-estrategia-derecha ul {
         margin-left: 0px; }
         #seccionEstrategia .grid-estrategia #grid-estrategia-derecha ul li {
@@ -315,27 +394,18 @@ ul {
 
 #seccionCapacitaciones {
   position: relative; }
-  #seccionCapacitaciones .flex-rama {
-    display: flex;
-    justify-content: space-between;
-    margin: 0px;
-    padding: 0px;
-    align-items: center; }
-    #seccionCapacitaciones .flex-rama #branch {
-      height: 200px;
-      width: 400px;
-      margin: 0px;
-      padding: 0px; }
-      @media screen and (min-width: 250px) and (max-width: 768px) {
-        #seccionCapacitaciones .flex-rama #branch {
-          display: none; } }
-    #seccionCapacitaciones .flex-rama #capacitaciones {
-      font-size: 25px;
-      margin-top: 70px;
-      margin-right: 350px;
-      font-family: 'Montserrat', sans-serif;
-      margin-bottom: 0px;
-      font-weight: 300; }
+  #seccionCapacitaciones #capacitaciones {
+    font-size: 25px;
+    margin-top: 70px;
+    padding: 10px;
+    padding-right: 350px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    margin-bottom: 1rem;
+    font-weight: 300;
+    background-color: #b2b2b2;
+    margin-bottom: 1rem;
+    text-align: right; }
   #seccionCapacitaciones .grid-capacitaciones {
     display: grid;
     grid-gap: 0px;
@@ -368,10 +438,11 @@ ul {
   font-size: 25px;
   margin-top: 70px;
   padding-left: 150px;
-  color: black;
+  color: white;
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
-  background-color: #b2b2b2; }
+  background-color: #b2b2b2;
+  margin-bottom: 1rem; }
 
 #seccionComunicacion .grid-comunicacion {
   display: grid;
@@ -379,7 +450,6 @@ ul {
   justify-content: space-around;
   grid-template-columns: 50% 50%;
   align-items: center;
-  padding-top: 10px;
   margin: 0px;
   grid-template-areas: "izquierda derecha"; }
   @media screen and (min-width: 250px) and (max-width: 768px) {
@@ -397,7 +467,8 @@ ul {
       position: relative; }
   #seccionComunicacion .grid-comunicacion #grid-comunicacion-derecha {
     grid-area: derecha;
-    margin-right: 100px; }
+    margin-right: 100px;
+    margin-top: 20px; }
     #seccionComunicacion .grid-comunicacion #grid-comunicacion-derecha ul {
       margin-left: 0px; }
       #seccionComunicacion .grid-comunicacion #grid-comunicacion-derecha ul li {
@@ -425,39 +496,54 @@ ul {
   .grid-contacto #izquierda {
     grid-area: izquierda;
     padding: 20px;
-    padding-bottom: 0px; }
+    padding-bottom: 0px;
+    margin-top: 20px; }
+    .grid-contacto #izquierda #hablemos {
+      font-family: 'Montserrat', sans-serif;
+      color: black;
+      font-weight: 300;
+      font-size: 1.3rem;
+      margin-bottom: 30px; }
+    .grid-contacto #izquierda .titulo-contacto-izquierda {
+      font-size: 1rem;
+      font-weight: 600; }
   .grid-contacto #derecha {
     grid-area: derecha;
     padding: 20px; }
   .grid-contacto .elementos {
     margin: 10px; }
-    .grid-contacto .elementos #contactanos {
-      margin-top: 0px;
-      padding-top: 0px;
-      margin-bottom: 50px;
-      margin-left: 20px;
-      font-size: 2rem; }
   .grid-contacto form .formulario {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    padding: 0px;
+    height: auto;
+    width: 300px;
+    font-size: 17px;
+    position: relative; }
+  .grid-contacto form .label {
+    margin-bottom: 0px;
     margin-top: 10px;
+    margin-right: 5px;
+    color: #363232; }
+    .grid-contacto form .label p {
+      margin-left: 5px; }
+  .grid-contacto form #comentario {
+    margin-top: 0px;
     margin-bottom: 10px;
     margin-left: 30px;
     padding: 0px;
     height: 50px;
     width: 300px;
     font-size: 20px;
-    border: 0;
-    border-bottom: 1px solid #848484;
-    position: relative; }
-    .grid-contacto form .formulario #comentario {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-left: 30px;
-      padding: 0px;
-      height: 50px;
-      width: 300px;
-      font-size: 20px;
-      border: 1px solid #848484;
-      font-family: 'Roboto'; }
+    border: 1px solid #848484;
+    font-family: 'Roboto'; }
+  .grid-contacto form .flexOpcional {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    height: 27px; }
   .grid-contacto form .boton:hover {
     transform: scale(1.1);
     transform-origin: center;
@@ -465,7 +551,7 @@ ul {
     filter: invert(100%); }
   .grid-contacto .gridContactoIcons {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 0px;
     grid-template-columns: 7% 93%;
     margin-top: 20px;
     margin-bottom: 0px;
@@ -475,15 +561,18 @@ ul {
     .grid-contacto .gridContactoIcons #tel-icono-contacto {
       grid-area: tel; }
     .grid-contacto .gridContactoIcons #tel-enlace-contacto {
-      grid-area: num; }
+      grid-area: num;
+      margin-top: 20px; }
     .grid-contacto .gridContactoIcons #mail-icono-contacto {
       grid-area: sobre; }
     .grid-contacto .gridContactoIcons #mail-enlace-contacto {
-      grid-area: mail; }
+      grid-area: mail;
+      margin-top: 20px; }
     .grid-contacto .gridContactoIcons #map-icono-contacto {
       grid-area: flecha; }
     .grid-contacto .gridContactoIcons #map-enlace-contacto {
-      grid-area: ciudad; }
+      grid-area: ciudad;
+      margin-top: 20px; }
     .grid-contacto .gridContactoIcons p {
       font-size: 1rem;
       margin-top: 10px; }
@@ -510,7 +599,9 @@ ul {
 # Footer
 --------------------------------------------------------------*/
 footer {
-  padding: 0px; }
+  padding: 0px;
+  background-color: #6f9c53;
+  margin-top: 0px; }
   footer .footer-grid {
     display: grid;
     grid-gap: 0px;
@@ -543,7 +634,7 @@ footer {
     footer .footer-grid p {
       font-size: 13px; }
     footer .footer-grid h3 {
-      margin-left: 35px;
+      margin-left: 25px;
       margin-top: 0px;
       padding-top: 0px;
       margin-bottom: 10px;
@@ -606,14 +697,14 @@ footer {
       padding-right: 0px;
       margin-right: 0px;
       padding-left: 0px;
-      margin-left: 10px;
+      margin-left: 0px;
       margin-top: 3px; }
     footer .footer-grid .ft-redes-1 {
       margin-left: 0px;
       padding-right: 0px;
       margin-right: 0px; }
     footer .footer-grid .ft-enlaces-1 {
-      padding-left: 10px;
+      padding-left: 0px;
       margin-right: 0px;
       margin-left: 0px;
       padding-right: 0px;
