--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,8 @@ section {
     font-size: 1.3rem; }
   .gridIndexServicios .parrafoIndexServicios {
     font-size: 1rem; }
+  .gridIndexServicios #comu-impacto {
+    margin-top: 25px; }
 
 /*--------------------------------------------------------------
 # General
